--- a/imgui.ini
+++ b/imgui.ini
@@ -19,8 +19,8 @@ IsChild=1
 Size=200,100
 
 [Window][A Cool New Window]
-Pos=-2101,216
-Size=5254,538
+Pos=527,40
+Size=575,210
 
 [Window][Delete?]
 Pos=484,307
@@ -33,6 +33,10 @@ Size=409,172
 [Window][Stacked 2]
 Pos=527,313
 Size=226,94
+
+[Window][Mesh Information]
+Pos=75,44
+Size=316,146
 
 [Table][0xB6880529,2]
 RefScale=13
