--- a/imgui.ini
+++ b/imgui.ini
@@ -19,7 +19,7 @@ IsChild=1
 Size=200,100
 
 [Window][A Cool New Window]
-Pos=527,40
+Pos=691,1
 Size=575,210
 
 [Window][Delete?]
@@ -35,8 +35,12 @@ Pos=527,313
 Size=226,94
 
 [Window][Mesh Information]
-Pos=75,44
-Size=316,146
+Pos=2,9
+Size=316,163
+
+[Window][Tint and Offset]
+Pos=3,180
+Size=393,128
 
 [Table][0xB6880529,2]
 RefScale=13
