--- a/imgui.ini
+++ b/imgui.ini
@@ -19,8 +19,8 @@ IsChild=1
 Size=200,100
 
 [Window][A Cool New Window]
-Pos=668,385
-Size=575,210
+Pos=583,-1
+Size=710,156
 
 [Window][Delete?]
 Pos=484,307
@@ -35,11 +35,11 @@ Pos=527,313
 Size=226,94
 
 [Window][Mesh Information]
-Pos=2,9
-Size=316,163
+Pos=-13,-8
+Size=419,169
 
 [Window][Tint and Offset]
-Pos=3,180
+Pos=317,5
 Size=393,128
 
 [Table][0xB6880529,2]
