--- a/imgui.ini
+++ b/imgui.ini
@@ -35,12 +35,16 @@ Pos=527,313
 Size=226,94
 
 [Window][Mesh Information]
-Pos=-13,-8
+Pos=31,148
 Size=419,169
 
 [Window][Tint and Offset]
 Pos=317,5
 Size=393,128
+
+[Window][Cameras]
+Pos=33,7
+Size=175,126
 
 [Table][0xB6880529,2]
 RefScale=13
