--- a/D3D11Starter.vcxproj.filters
+++ b/D3D11Starter.vcxproj.filters
@@ -157,5 +157,11 @@
     <FxCompile Include="CustomPS1.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="TwoTextureShader.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
