assignment 8 start (roughness)

--- a/D3D11Starter.vcxproj
+++ b/D3D11Starter.vcxproj
@@ -237,6 +237,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="ShaderHeaders.hlsli" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
