--- a/D3D11Starter.vcxproj.filters
+++ b/D3D11Starter.vcxproj.filters
@@ -163,5 +163,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="ShaderHeaders.hlsli" />
   </ItemGroup>
 </Project>
