--- a/imgui.ini
+++ b/imgui.ini
@@ -19,7 +19,7 @@ IsChild=1
 Size=200,100
 
 [Window][A Cool New Window]
-Pos=583,-1
+Pos=1339,990
 Size=710,156
 
 [Window][Delete?]
@@ -45,6 +45,10 @@ Size=393,128
 [Window][Cameras]
 Pos=33,7
 Size=175,126
+
+[Window][Lights]
+Pos=1353,11
+Size=385,438
 
 [Table][0xB6880529,2]
 RefScale=13
