--- a/imgui.ini
+++ b/imgui.ini
@@ -19,7 +19,7 @@ IsChild=1
 Size=200,100
 
 [Window][A Cool New Window]
-Pos=9,566
+Pos=9,480
 Size=710,156
 
 [Window][Delete?]
@@ -43,12 +43,16 @@ Pos=317,5
 Size=393,128
 
 [Window][Cameras]
-Pos=33,7
-Size=175,126
+Pos=7,113
+Size=374,355
 
 [Window][Lights]
-Pos=1260,20
+Pos=911,434
 Size=385,430
+
+[Window][Post Processing]
+Pos=985,16
+Size=349,324
 
 [Table][0xB6880529,2]
 RefScale=13
